@@ -31,9 +31,9 @@ public final class SharedChatUtils {
   }
 
   public static String formatDuration(String str, Duration duration, int position) {
-    String format = duration.toHours() == 0 ?
-      String.format("%dm", duration.toMinutes() == 0 ? 1 : duration.toMinutes()) :
-      String.format("%dh %dm", duration.toHours(), duration.toMinutes() % 60);
+    String format = duration.toHours() == 0
+      ? "%dm".formatted(duration.toMinutes() == 0 ? 1 : duration.toMinutes())
+      : "%dh %dm".formatted(duration.toHours(), duration.toMinutes() % 60);
 
     return str.replace("%position%", String.valueOf(position)).replace("%wait%", format);
   }
